# nrf54-nix-cpp

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.nix  west2nix.toml
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
app/src/: main.cpp
app/zephyr/: patches.yml
app/zephyr/patches/: jlink-rtt-use-socat.patch
include/app/lib/: fs.hpp
lib/: CMakeLists.txt  Kconfig
lib/fs/: CMakeLists.txt  Kconfig  fs.cpp
